@@ -1,10 +1,10 @@
-@comment $NetBSD: PLIST,v 1.3 2002/08/25 18:38:30 jlam Exp $
+@comment $NetBSD: PLIST,v 1.4 2002/12/31 19:06:57 jlam Exp $
 bin/mm-config
 include/mm.h
 lib/libmm.a
 lib/libmm.la
 lib/libmm.so
 lib/libmm.so.12
-lib/libmm.so.12.21
+lib/libmm.so.12.22
 man/man1/mm-config.1
 man/man3/mm.3
